crates/aion-awl/tests/fixtures/rev2/loop-outcomes/valid/route_outcome_by_name.awl
//! Condense a document; the summary binding itself is the outcome payload.
workflow summarize
  input text: String

  outcome summary: type Summary, route success
  outcome no_content: type EmptyDoc, route failure

type Summary  { text: String, words: Int }
type EmptyDoc { reason: String }

worker summarizer
  action condense(text: String) -> Summary
    node model, timeout 10m

step summarize
  condense(text: text) -> summary

  outcome ok: when summary.words > 0, route summary
  outcome none: otherwise, route no_content(reason: "no content to summarize")
